--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@
       text-align: center
     }
 
-    .flag-label {
-      font-weight: 800
-    }
-
     .footer-right {
       margin-left: auto;
       display: flex;
       align-items: center;
       gap: 10px;
-      padding-right: 6px
+      padding-right: 2px
+    }
+
+    .flag-label {
+      font-weight: 800
     }
 
     .flag-btn {
@@ -251,7 +251,8 @@
       padding: 10px 12px;
       border-radius: 999px;
       cursor: pointer;
-      font-size: 18px
+      font-size: 18px;
+      margin-right: -6px
     }
 
     :root[data-theme="lando"] .flag-btn {
@@ -266,39 +267,40 @@
       display: none;
       align-items: center;
       justify-content: center;
-      background: rgba(0, 0, 0, .64);
+      background: rgba(0, 0, 0, .62);
       backdrop-filter: blur(10px);
       z-index: 50
     }
 
     .sequence {
       display: grid;
-      gap: 16px;
+      gap: 14px;
       justify-items: center
     }
 
     .sequence-card {
-      background: rgba(255, 255, 255, .98);
-      border-radius: 22px;
+      background: #fff;
+      border-radius: 26px;
       padding: 18px 20px;
       box-shadow: 0 22px 48px rgba(12, 21, 33, .28);
       text-align: center;
-      min-width: min(560px, 92vw)
+      min-width: min(540px, 92vw)
     }
 
     .start-lights {
       display: flex;
-      gap: 12px;
+      gap: 10px;
       background: #efefef;
-      padding: 14px 18px;
+      padding: 12px 16px;
       border-radius: 999px;
-      border: 1px solid var(--ring);
-      margin: 0 auto
+      border: 1px solid #e0e0e0;
+      margin: 0 auto;
+      max-width: 92%
     }
 
     .light {
-      width: 26px;
-      height: 26px;
+      width: 22px;
+      height: 22px;
       border-radius: 50%;
       background: #2b2b2b;
       border: 1px solid rgba(0, 0, 0, .2)
@@ -309,7 +311,7 @@
     }
 
     .light.on.green {
-      background: #14b314
+      background: #32a852
     }
 
     .seq-title {
@@ -325,9 +327,9 @@
 
     .winner-card {
       display: none;
-      margin-top: 12px;
+      margin-top: 10px;
       border-radius: 18px;
-      padding: 14px;
+      padding: 12px;
       background: linear-gradient(180deg, #ffffff, #f6f8ff)
     }
 
@@ -338,8 +340,8 @@
     }
 
     .wavatar {
-      width: 84px;
-      height: 84px;
+      width: 82px;
+      height: 82px;
       border-radius: 16px;
       object-fit: cover;
       border: 1px solid #d9d9d9;
@@ -348,7 +350,7 @@
 
     .winfo {
       display: grid;
-      gap: 4px;
+      gap: 3px;
       text-align: left
     }
 
@@ -374,7 +376,7 @@
 
     .wsub {
       color: #6b7280;
-      font-size: 14px
+      font-size: 13px
     }
 
     .wbadge {
@@ -411,6 +413,7 @@
     <div class="container">
       <h1>Hi, I’m Katherine — Computer Science student (soon Simulation Engineering) building playful-aesthetic code.
       </h1>
+
       <div class="driver-bar" style="margin-top:10px">
         <span>Favorite drivers:</span>
         <button class="btn" data-theme="carlos">Carlos Sainz Jr.</button>
@@ -418,6 +421,7 @@
         <button class="btn" id="resetTheme">Reset theme</button>
         <span>(themed confetti)</span>
       </div>
+
       <div class="hub">
         <a class="cta" href="projects.html">My Projects</a>
         <a class="cta" href="about.html">About</a>
@@ -428,10 +432,11 @@
 
   <footer>
     <div class="container footer-row">
-      <div class="grow">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS</div>
+      <div class="grow">© <span id="year"></span> Katherine Chen • Built with HTML/CSS/JS • Deployed on GitHub Pages
+      </div>
       <div class="footer-right">
-        <span class="flag-label">Click the flag to start</span>
-        <button class="flag-btn" id="flagGo">🏁</button>
+        <span class="flag-label">Click to start sequence</span>
+        <button class="flag-btn" id="flagGo" title="Start lights + winner card">🏁</button>
       </div>
     </div>
   </footer>
@@ -469,12 +474,49 @@
     document.getElementById('year').textContent = new Date().getFullYear()
     const root = document.documentElement
     const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved)
-    function setThemeAndConfetti(name) { if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos') } if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando') } }
+
+    function setThemeAndConfetti(name) {
+      if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos') }
+      if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando') }
+    }
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', e => { e.stopPropagation(); setThemeAndConfetti(b.dataset.theme) }))
     document.getElementById('resetTheme').addEventListener('click', e => { e.stopPropagation(); root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfettiUnified() })
 
     const TEAM_COLORS = { "Red Bull": ["#1e41ff", "#ffde00", "#e10600"], "Ferrari": ["#e10600", "#000", "#fff200"], "McLaren": ["#ff8000", "#00a0de", "#111"], "Mercedes": ["#00a19b", "#000", "#c0c0c0"], "Aston Martin": ["#00665e", "#ffd700", "#003e38"], "Williams": ["#00a0ff", "#001b3a", "#ffffff"], "Alpine": ["#ff69b4", "#000", "#00b3ff"], "RB": ["#001b3a", "#ffffff", "#ff2b2b"], "Kick Sauber": ["#006847", "#ffffff", "#d52b1e"], "Haas": ["#e10600", "#000", "#fff"] }
-    const DRIVER_IMAGES = { "Max Verstappen": { number: "1", img: "https://i.pinimg.com/736x/db/09/13/db0913972980b0ef004f82d66e9d6a82.jpg" }, "Yuki Tsunoda": { number: "22", img: "https://i.pinimg.com/736x/e7/52/4e/e7524ea95ec040f148412a1be120d50f.jpg" }, "Charles Leclerc": { number: "16", img: "https://i.pinimg.com/736x/63/ae/1b/63ae1b2000343836519aade2d3a4b6f7.jpg" }, "Lewis Hamilton": { number: "44", img: "https://i.pinimg.com/736x/56/ed/d3/56edd3cfe762ba4d1602774d1a190c67.jpg" }, "George Russell": { number: "63", img: "https://i.pinimg.com/736x/7f/dd/bc/7fddbc883419318d2651b19184f51496.jpg" }, "Kimi Antonelli": { number: "12", img: "https://i.pinimg.com/736x/25/5e/ad/255eadaf7b72ef3299add764c7517fd1.jpg" }, "Lando Norris": { number: "4", img: "https://i.pinimg.com/1200x/bf/92/dc/bf92dcceb0a38fb4223add088d2dee5c.jpg" }, "Oscar Piastri": { number: "81", img: "https://i.pinimg.com/736x/84/dc/d1/84dcd1815774227c21c100e4ba24a4b3.jpg" }, "Liam Lawson": { number: "30", img: "https://i.pinimg.com/736x/be/b2/75/beb27524bc311f98e0cf9aba39874dfa.jpg" }, "Isack Hadjar": { number: "6", img: "https://i.pinimg.com/736x/91/99/51/91995154385797732801e76c6ee72351.jpg" }, "Fernando Alonso": { number: "14", img: "https://i.pinimg.com/736x/39/b0/3a/39b03abe0c24a2c4e4e871213bb60f83.jpg" }, "Lance Stroll": { number: "18", img: "https://i.pinimg.com/736x/81/70/30/817030e869314ba7ba5ba4aecce74b4d.jpg" }, "Alexander Albon": { number: "23", img: "https://i.pinimg.com/736x/1a/9f/f4/1a9ff4d0ec2318f6a0f5358f2c329d51.jpg" }, "Carlos Sainz": { number: "55", img: "https://i.pinimg.com/736x/5b/25/c8/5b25c8adf5bc8bb34831e5eae6fe0d59.jpg" }, "Pierre Gasly": { number: "10", img: "https://i.pinimg.com/736x/c6/1f/36/c61f360f00314644fc69975188daa1c8.jpg" }, "Franco Colapinto": { number: "7", img: "https://i.pinimg.com/736x/dd/e9/8c/dde98ca29bf331c5dffc3fd5f695353b.jpg" }, "Esteban Ocon": { number: "31", img: "https://i.pinimg.com/736x/03/a1/a1/03a1a1e842c76990ea4f11b612cac193.jpg" }, "Oliver Bearman": { number: "87", img: "https://i.pinimg.com/736x/02/08/e9/0208e9f1f70248040c745775c63e684f.jpg" }, "Nico Hülkenberg": { number: "27", img: "https://i.pinimg.com/736x/08/48/30/084830422b81cf2b7050dd0d9e5757bf.jpg" }, "Gabriel Bortoleto": { number: "5", img: "https://i.pinimg.com/736x/ab/e2/2d/abe22dce2129700892df4b74d52aab8e.jpg" } }
+
+    const DRIVER_IMAGES = {
+      "Max Verstappen": { number: "1", img: "https://i.pinimg.com/736x/db/09/13/db0913972980b0ef004f82d66e9d6a82.jpg" },
+      "Yuki Tsunoda": { number: "22", img: "https://i.pinimg.com/736x/e7/52/4e/e7524ea95ec040f148412a1be120d50f.jpg" },
+      "Charles Leclerc": { number: "16", img: "https://i.pinimg.com/736x/63/ae/1b/63ae1b2000343836519aade2d3a4b6f7.jpg" },
+      "Lewis Hamilton": { number: "44", img: "https://i.pinimg.com/736x/56/ed/d3/56edd3cfe762ba4d1602774d1a190c67.jpg" },
+      "George Russell": { number: "63", img: "https://i.pinimg.com/736x/7f/dd/bc/7fddbc883419318d2651b19184f51496.jpg" },
+      "Kimi Antonelli": { number: "12", img: "https://i.pinimg.com/736x/25/5e/ad/255eadaf7b72ef3299add764c7517fd1.jpg" },
+      "Lando Norris": { number: "4", img: "https://i.pinimg.com/1200x/bf/92/dc/bf92dcceb0a38fb4223add088d2dee5c.jpg" },
+      "Oscar Piastri": { number: "81", img: "https://i.pinimg.com/736x/84/dc/d1/84dcd1815774227c21c100e4ba24a4b3.jpg" },
+      "Liam Lawson": { number: "30", img: "https://i.pinimg.com/736x/be/b2/75/beb27524bc311f98e0cf9aba39874dfa.jpg" },
+      "Isack Hadjar": { number: "6", img: "https://i.pinimg.com/736x/91/99/51/91995154385797732801e76c6ee72351.jpg" },
+      "Fernando Alonso": { number: "14", img: "https://i.pinimg.com/736x/39/b0/3a/39b03abe0c24a2c4e4e871213bb60f83.jpg" },
+      "Lance Stroll": { number: "18", img: "https://i.pinimg.com/736x/81/70/30/817030e869314ba7ba5ba4aecce74b4d.jpg" },
+      "Alexander Albon": { number: "23", img: "https://i.pinimg.com/736x/1a/9f/f4/1a9ff4d0ec2318f6a0f5358f2c329d51.jpg" },
+      "Carlos Sainz": { number: "55", img: "https://i.pinimg.com/736x/5b/25/c8/5b25c8adf5bc8bb34831e5eae6fe0d59.jpg" },
+      "Pierre Gasly": { number: "10", img: "https://i.pinimg.com/736x/c6/1f/36/c61f360f00314644fc69975188daa1c8.jpg" },
+      "Franco Colapinto": { number: "7", img: "https://i.pinimg.com/736x/dd/e9/8c/dde98ca29bf331c5dffc3fd5f695353b.jpg" },
+      "Esteban Ocon": { number: "31", img: "https://i.pinimg.com/736x/03/a1/a1/03a1a1e842c76990ea4f11b612cac193.jpg" },
+      "Oliver Bearman": { number: "87", img: "https://i.pinimg.com/736x/02/08/e9/0208e9f1f70248040c745775c63e684f.jpg" },
+      "Nico Hülkenberg": { number: "27", img: "https://i.pinimg.com/736x/08/48/30/084830422b81cf2b7050dd0d9e5757bf.jpg" },
+      "Gabriel Bortoleto": { number: "5", img: "https://i.pinimg.com/736x/ab/e2/2d/abe22dce2129700892df4b74d52aab8e.jpg" }
+    }
+
+    const ROTATION = [
+      { driver: "Lando Norris", team: "McLaren", nationality: "British" },
+      { driver: "Charles Leclerc", team: "Ferrari", nationality: "Monegasque" },
+      { driver: "Max Verstappen", team: "Red Bull", nationality: "Dutch" },
+      { driver: "Lewis Hamilton", team: "Mercedes", nationality: "British" },
+      { driver: "Carlos Sainz", team: "Ferrari", nationality: "Spanish" },
+      { driver: "Oscar Piastri", team: "McLaren", nationality: "Australian" },
+      { driver: "Fernando Alonso", team: "Aston Martin", nationality: "Spanish" },
+      { driver: "George Russell", team: "Mercedes", nationality: "British" }
+    ]
 
     const overlay = document.getElementById('seqOverlay')
     const lights = [...document.querySelectorAll('.light')]
@@ -492,29 +534,29 @@
         const j = await r.json()
         const race = j?.MRData?.RaceTable?.Races?.[0]
         const res = race?.Results?.[0]
-        const d = res?.Driver, t = res?.Constructor?.name
-        const driver = d ? d.givenName + " " + d.familyName : ""
-        const nationality = d?.nationality || ""
-        const number = d?.permanentNumber || ""
-        const data = { driver, team: t || "", nationality, number, race: race?.raceName || "Grand Prix" }
-        if (driver) localStorage.setItem('kc-lastWinner', JSON.stringify(data))
-        return data
+        if (!res) throw 0
+        return {
+          driver: res.Driver.givenName + ' ' + res.Driver.familyName,
+          team: res.Constructor.name,
+          nationality: res.Driver.nationality || '',
+          number: res.Driver.permanentNumber || '',
+          race: race?.raceName || 'Grand Prix'
+        }
       } catch (e) {
-        const cached = localStorage.getItem('kc-lastWinner')
-        if (cached) return JSON.parse(cached)
-        return { driver: "", team: "", nationality: "", number: "", race: "Grand Prix" }
+        const i = (function (d) { d.setHours(0, 0, 0, 0); const onejan = new Date(d.getFullYear(), 0, 1); return Math.ceil((((d - onejan) / 86400000) + onejan.getDay() + 1) / 7) })(new Date())
+        const pick = ROTATION[i % ROTATION.length]
+        return { driver: pick.driver, team: pick.team, nationality: pick.nationality, number: (DRIVER_IMAGES[pick.driver]?.number || ''), race: 'Grand Prix' }
       }
     }
 
     function showWinnerCard(data) {
-      if (!data || !data.team || !data.driver) { winnerCard.style.display = 'none'; startWinnerConfetti(['#ffd166', '#6ee7b7', '#93c5fd']); return }
       const manual = DRIVER_IMAGES[data.driver] || {}
       const teamColors = TEAM_COLORS[data.team] || ['#ffd166', '#6ee7b7', '#93c5fd']
       wTitle.textContent = data.driver
       wNumber.textContent = manual.number ? ('#' + manual.number) : (data.number ? ('#' + data.number) : '#–')
-      wTeam.textContent = data.team
+      wTeam.textContent = data.team || '—'
       wNat.textContent = '🏁 ' + (data.nationality || '—')
-      wSub.textContent = (data.race || 'Grand Prix') + ' • ' + data.team
+      wSub.textContent = (data.race || 'Grand Prix') + ' • ' + (data.team || '—')
       if (manual.img) { wAvatar.src = manual.img; wAvatar.alt = data.driver } else { wAvatar.removeAttribute('src'); wAvatar.alt = '' }
       winnerCard.style.display = 'block'
       startWinnerConfetti(teamColors)
@@ -535,11 +577,10 @@
             const w = await fetchLatestWinner()
             showWinnerCard(w)
             setTimeout(() => { overlay.style.display = 'none' }, 5200)
-          }, 450)
+          }, 420)
         }
-      }, 250)
+      }, 230)
     }
-
     document.getElementById('flagGo').addEventListener('click', e => { e.stopPropagation(); runSequence() })
   </script>
 </body>
